test/tests/VoidExpression2.expected
VoidExpression2.frost:2:5: error: method frost.io.Console.printLine() does not return a value
1 error
