test/tests/VoidExpression2.frost
method test() {
    Console.printLine().doSomethingElse()
}
